# Waves

./: .gitignore  CMakeLists.txt  main.cpp
src/: Audio.hpp  AudioSource.hpp  AudioStream.cpp  AudioStream.hpp  CMakeLists.txt  SignalSource.cpp  SignalSource.hpp  SourcePlayer.cpp  SourcePlayer.hpp  WavFile.cpp  WavFile.hpp  WavSource.cpp  WavSource.hpp  WaveGenerator.cpp  WaveGenerator.hpp  main.cpp
ui/: AudioChart.cpp  AudioChart.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
